+fix: display none, a ".titreDeSection" on mobile view

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -43,6 +43,10 @@
         gap: 1rem;
     }
 
+    .titreDeSection {
+        display: none;
+    }
+
     .menu-popup {
         z-index: 10;
         display: flex;
